# homecontrol-api

./: .gitignore  CHANGELOG.txt  Dockerfile  Dockerfile.prod  api-example.json  docker-compose-production.yml  docker-compose.yml  docker_entrypoint.sh  logging-example.ini  pyproject.toml  requirements.txt  test.py
homecontrol_api/: exceptions.py  main.py  schemas.py  service.py
homecontrol_api/actions/: schemas.py  service.py
homecontrol_api/authentication/: schemas.py  security.py  service.py
homecontrol_api/config/: api.py
homecontrol_api/core/: types.py
homecontrol_api/database/: database.py  jobs.py  models.py  room_actions.py  rooms.py  temperatures.py  user_sessions.py  users.py
homecontrol_api/devices/aircon/: schemas.py
homecontrol_api/devices/broadlink/: schemas.py
homecontrol_api/devices/hue/: schemas.py
homecontrol_api/migrations/: alembic.ini  env.py
homecontrol_api/migrations/versions/: 709938c5c3d9_create_a_baseline_migration.py  8908c265d8c6_create_database.py  e993170acb73_modify_jobs_schema_for_room_actions.py
homecontrol_api/rooms/: schemas.py  service.py
homecontrol_api/routers/: auth.py  authentication.py  dependencies.py  rooms.py  scheduler.py  temperature.py
homecontrol_api/routers/actions/: actions.py  broadlink.py  room.py
homecontrol_api/routers/devices/: aircon.py  broadlink.py  hue.py
homecontrol_api/scheduler/: core.py  schemas.py  service.py  tasks.py
homecontrol_api/service/: core.py  homecontrol_api.py
homecontrol_api/temperature/: schemas.py  service.py
homecontrol_api/users/: schemas.py  security.py  service.py
scripts/: migrate_monitoring_from_old.py
