[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homecontrol-api"
version = "0.2.1"
authors = [{ name = "2851999", email = "2851999@users.noreply.github.com" }]
description = "A library for controlling home appliances"
license = { text = "Apache License 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9.5"
dependencies = [
    "homecontrol-base@git+https://github.com/2851999/homecontrol-base@ff7f499559bdf5a5f7bbea12b9b60c151d00613b",
    "fastapi",
    "uvicorn[standard]",
    "bcrypt",
    "pyjwt",
    "sqlalchemy-json",
    "APScheduler",
]

[project.scripts]
homecontrol-api-alembic = "homecontrol_api.migrations:main"

[tool.setuptools]
packages = ["homecontrol_api"]

[tool.setuptools.package-data]
homecontrol_base = ["migrations/*"]
